--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,6 +13,6 @@ jobs:
       - uses: actions/checkout@v4
 
       - uses: ko-build/setup-ko@v0.6
-      - run: ko build ./cmd/yum2npm
+      - run: ko build --verbose ./cmd/yum2npm
         env:
           KO_DOCKER_REPO: ghcr.io/kong/yum2npm
