--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,7 +13,10 @@ jobs:
       - uses: actions/checkout@v4
 
       - uses: ko-build/setup-ko@v0.6
-      - run: ko build --verbose ./cmd/yum2npm
-        env:
+      - env:
           KO_DOCKER_REPO: ghcr.io/kong/yum2npm
-          KO_DATA_PATH: kodata
+          KO_DATA_PATH: /kodata
+        run: |
+          ko build \
+            ${{ runner.debug == '1' && '--verbose' || '' }} \
+            ./cmd/yum2npm
